<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_connect"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.d2dindustries.pictawall.ConnectActivity">


    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="normal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:id="@+id/fabClose"
        app:backgroundTint="@android:color/white"
        app:srcCompat="@drawable/green_checkmark"/>

    <ImageButton
        android:id="@+id/buttonDribble"
        android:text="@string/social_instagram"
        android:background="@mipmap/dribble_logo"
        android:textColor="@color/colorWhite"
        android:textStyle="normal|bold"
        android:layout_height="70dp"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/buttonPixabay"
        android:layout_width="70dp"
        android:contentDescription="" />

    <TextView
        android:text="@string/social_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textColor="@color/colorGray"
        android:textStyle="normal|bold"
        android:textSize="24sp"
        android:typeface="monospace"
        android:layout_marginTop="17dp"
        android:fontFamily="sans-serif-condensed"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:text="@string/social_facebook"
        android:id="@+id/buttonInstagram"
        android:background="@mipmap/instagram_logo"
        android:textColor="@color/colorWhite"
        android:textStyle="normal|bold"
        android:paddingLeft="@dimen/welcome_button_margin"
        android:paddingRight="@dimen/welcome_button_margin"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription=""
        android:layout_alignTop="@+id/buttonSmugmug"
        android:layout_alignEnd="@+id/textView" />

    <ImageButton
        android:id="@+id/buttonFacebook"
        android:text="@string/social_facebook"
        android:background="@mipmap/facebook_logo"
        android:textColor="@color/colorWhite"
        android:textStyle="normal|bold"
        android:paddingLeft="@dimen/welcome_button_margin"
        android:paddingRight="@dimen/welcome_button_margin"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription=""
        android:layout_alignTop="@+id/buttonDribble"
        android:layout_alignStart="@+id/buttonInstagram" />

    <ImageButton
        android:id="@+id/buttonFlickr"
        android:text="@string/social_flickr"
        android:background="@mipmap/flickr_logo"
        android:textColor="@color/colorWhite"
        android:textStyle="normal|bold"
        android:paddingLeft="@dimen/welcome_button_margin"
        android:paddingRight="@dimen/welcome_button_margin"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription=""
        android:layout_alignTop="@+id/buttonPixabay"
        android:layout_alignStart="@+id/buttonFacebook" />

    <ImageButton
        android:id="@+id/buttonSmugmug"
        android:text="@string/social_instagram"
        android:background="@mipmap/smugmug_logo"
        android:textColor="@color/colorWhite"
        android:textStyle="normal|bold"
        android:layout_height="70dp"
        android:layout_width="70dp"
        android:layout_marginBottom="21dp"
        android:contentDescription=""
        android:layout_above="@+id/fabClose"
        android:layout_alignStart="@+id/buttonDribble" />

    <ImageButton
        android:id="@+id/buttonPixabay"
        android:text="@string/social_pixabay"
        android:background="@mipmap/pixabay_logo"
        android:textColor="@color/colorWhite"
        android:textStyle="normal|bold"
        android:paddingLeft="@dimen/welcome_button_margin"
        android:paddingRight="@dimen/welcome_button_margin"
        android:contentDescription=""
        android:layout_height="70dp"
        android:layout_width="70dp"
        android:layout_marginBottom="41dp"
        android:layout_above="@+id/buttonDribble"
        android:layout_alignStart="@+id/textView" />
</RelativeLayout>
